# RFID

./: Cargo.toml  README.md  sqlite3.db
doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
doc/RFID/: all.html  fn.auth.html  fn.hexa_to_decimal.html  fn.hexa_to_tableau.html  fn.keyload.html  fn.main.html  fn.read.html  fn.read_sector.html  fn.write.html  index.html  sidebar-items.js
doc/pcsc/: all.html  constant.MAX_ATR_SIZE.html  constant.MAX_BUFFER_SIZE.html  constant.MAX_BUFFER_SIZE_EXTENDED.html  enum.Attribute.html  enum.AttributeClass.html  enum.Disposition.html  enum.Error.html  enum.Protocol.html  enum.Scope.html  enum.ShareMode.html  fn.PNP_NOTIFICATION.html  fn.ctl_code.html  index.html  sidebar-items.js  struct.Card.html  struct.CardStatus.html  struct.CardStatusOwned.html  struct.Context.html  struct.Protocols.html  struct.ReaderNames.html  struct.ReaderState.html  struct.State.html  struct.Status.html  struct.Transaction.html
doc/pcsc_sys/: all.html  constant.ATR_BUFFER_SIZE.html  constant.INFINITE.html  constant.MAX_ATR_SIZE.html  constant.MAX_BUFFER_SIZE.html  constant.MAX_BUFFER_SIZE_EXTENDED.html  constant.SCARD_ABSENT.html  constant.SCARD_ATR_LENGTH.html  constant.SCARD_ATTR_ASYNC_PROTOCOL_TYPES.html  constant.SCARD_ATTR_ATR_STRING.html  constant.SCARD_ATTR_CHANNEL_ID.html  constant.SCARD_ATTR_CHARACTERISTICS.html  constant.SCARD_ATTR_CURRENT_BWT.html  constant.SCARD_ATTR_CURRENT_CLK.html  constant.SCARD_ATTR_CURRENT_CWT.html  constant.SCARD_ATTR_CURRENT_D.html  (+178 more)
src/: card_operations.rs  dbo.rs  main.rs  utils.rs
(+40 files in other folders)
